--- a/index.htm
+++ b/index.htm
@@ -33,6 +33,16 @@
         <button id="join"> join</button>
         <a href="#"id="sign in">sign in</a>
     </nav>
+    <section id="hero">
+        <div class="detail">
+            <h1>Build Remote Engeneering Teams with the World Top Talent</h1>
+            <button id="cta">Hire Talent</button>
+        </div>
+            <div class="img">
+            <img src="./hero-4.png" alt="">
+            </div>
+        </div>
+    </section>
 <!-- script below -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js" integrity="sha512-Tn2m0TIpgVyTzzvmxLNuqbSJH3JP8jm+Cy3hvHrW7ndTDcJ1w5mBiksqDBb8GpE2ksktFvDB/ykZ0mDpsZj20w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
